center homepage heading text, fix navbar to remain visible and hide text on <900px screens - for clickable icon

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,28 +7,29 @@
 
 @media screen and (max-width: 900px) {
             
-        .nav-toggle:checked ~ nav {
+    .nav-toggle:checked ~ nav ul {
 
-            visibility: visible;
-            z-index: 10;
-        }
+        visibility: visible;
+        z-index: 10;
+    }
 
-        .nav-toggle-label img {
+    .nav-toggle-label img {
 
-            position: absolute;
-            height: 80px;
-            width: 80px;
-            margin: 1em 1em;
-            top: 0;
-            left: 0;
-            z-index: 10;
-        }
+        position: absolute;
+        height: 80px;
+        width: 80px;
+        border-radius: 50%;
+        margin: 1em 1em;
+        top: 0;
+        left: 0;
+        z-index: 10;
+    }
 
-        nav {
+    nav ul {
 
-            visibility: hidden;
-            
-        }
+        visibility: hidden;
+        
+    }
 
 }
 
@@ -62,9 +63,8 @@ nav {
 .navbar {
     
     display: flex;
-    width: 90%;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     gap: .5rem;
     margin-top: 0;
@@ -79,7 +79,7 @@ nav {
 .navbar li {
 
     flex-grow: 1;
-    flex-shrink: initial;
+    flex-shrink: 1;
     list-style-type: none;
 
 }
@@ -127,6 +127,7 @@ nav {
     font-family: Montserrat, Sans serif;
     font-size: xx-large;
     text-transform: uppercase;
+    text-align: center;
 
 }
 
@@ -392,7 +393,7 @@ h3 {
 
 .jump-btn i {
 
-    font-size: 400%;
+    font-size: 200%;
     color: #ed7444;
 
 }
@@ -550,7 +551,7 @@ a {
     border-radius: 8px;
     font-family: Montserrat, sans-serif;
     text-transform: uppercase;
-    font-size: 300%;
+    font-size: 150%;
     font-weight: bolder;
     text-align: center;
 }
@@ -799,6 +800,7 @@ a {
 #terms {
 
     margin-left: 1.5rem;
+    padding-top: 5em;
 }
 
 #terms h2, h3 {
